Bug 675416 - Disable recent bookmarks cache in beta, since it's bogus. r=dietrich a=LegNeato (transplanted from 6eafc1d64af99113395f386468155027ad17572b)

--HG--
extra : transplant_source : n%AF%C1%D6J%F9%91%139_8dh%15P%27%AD%17W%2B